# EEDDPracticas

./: AVL.cpp  AVL.h  CMakeLists.txt  Farmacia.cpp  Farmacia.h  Laboratorio.cpp  Laboratorio.h  ListaEnlazada.h  MediExpress.cpp  MediExpress.h  PaMedicamento.cpp  PaMedicamento.h  README.md  VDinamico.h  main.cpp
EEDDPR1/: CMakeLists.txt  VDinamico.h  main.cpp
EEDDPR1/EEDDPR1/: VDinamico.h
Practica1pruebas/: CMakeLists.txt  Laboratorio.h  ListaEnlazada.h  MediExpress.cpp  MediExpress.h  PaMedicamento.cpp  PaMedicamento.h  VDinamico.h  main.cpp
Practica1pruebas/Practica1pruebas/: CMakeLists.txt  ListaEnlazada.h  PaMedicamento.cpp  PaMedicamento.h  VDinamico.h  main.cpp
Practica2pruebas/Practica1pruebas/: Laboratorio.h  ListaEnlazada.h  MediExpress.cpp  MediExpress.h  PaMedicamento.h  main.cpp
