cmake_minimum_required(VERSION 4.0)
project(Practica1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practica1
        main.cpp
        PaMedicamento.cpp
        VDinamico.h
        PaMedicamento.h
        ListaEnlazada.h
        Laboratorio.h
        MediExpress.h
        MediExpress.cpp
        Farmacia.h
        Farmacia.cpp
        AVL.cpp
        AVL.h
)
